# LineraGame

./: Cargo.toml  README.md  index.html  linera-client.js  package.json  script.js  set_temp_path.ps1
frontend/: index.html  style.css
match-contract/: Cargo.toml
match-contract/src/: lib.rs
scripts/: build.sh  deploy.sh
server/: index.js  linera-proxy.js  linera-service.js
server/api/: player-stats.js
smart-contract/: Cargo.toml
smart-contract/src/: lib.rs
temp/: 04721b3c-34e8-42ff-b419-550ac51c1644.tmp  89a678ec-585a-4d55-b1b6-03e0ca9d86a9.tmp  a39534c9-a048-4355-882d-c86e29b45cdf.tmp
